--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
         <link rel="stylesheet" href="./style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 		
-		<link href="./_app/immutable/assets/2.6ebffe31.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3f1a393f.js">
+		<link href="./_app/immutable/assets/2.4789fef5.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4427b1e2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.cba584ed.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.984d55d7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.67c34635.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.758cf469.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.6e67e459.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.5c8a7516.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.66b0b486.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
-<div class="container svelte-12sdp5l"><div class="page page1 svelte-12sdp5l"><h1 id="name" class="svelte-12sdp5l">a</h1></div>
-    <div class="page page2 svelte-12sdp5l">page2
+<div class="container svelte-p2ypv"><div class="page page1 svelte-p2ypv"><h1 id="name" class="svelte-p2ypv"></h1></div>
+    <div class="page page2 svelte-p2ypv">page2
     </div>
 </div>
 
@@ -26,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_11dfrrp = {
+					__sveltekit_zdovwy = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -36,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3f1a393f.js"),
-						import("./_app/immutable/entry/app.984d55d7.js")
+						import("./_app/immutable/entry/start.4427b1e2.js"),
+						import("./_app/immutable/entry/app.758cf469.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
