--- a/src/app.html
+++ b/src/app.html
@@ -4,9 +4,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
         <link rel="stylesheet" href="./style.css">
-        <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+        <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script> -->
+        <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script> -->
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> -->
+        <script src="./src/lib/scrollmagic.js"></script>
+        <script src="./src/lib/gsap.js"></script>
+        <script src="./src/lib/scrollmagicmarkers.js"></script>
+        <script src="./src/lib/gsapplugin.js"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
