--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <script src="./src/lib/gsapplugin.js"></script>
 		
 		<link href="./_app/immutable/assets/2.f26e4965.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a4c388fc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.05e3bf92.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.e658e3fd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.120af8eb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.26f55301.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b3614709.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d05b5713.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.ebd3c666.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.00add97a.js">
 	</head>
@@ -40,7 +40,7 @@
 			
 			<script>
 				{
-					__sveltekit_1hm9ggu = {
+					__sveltekit_1r84t5f = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -50,8 +50,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a4c388fc.js"),
-						import("./_app/immutable/entry/app.26f55301.js")
+						import("./_app/immutable/entry/start.05e3bf92.js"),
+						import("./_app/immutable/entry/app.d05b5713.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
