--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <script src="./src/lib/scrollmagicmarkers.js"></script>
         <script src="./src/lib/gsapplugin.js"></script>
 		
-		<link href="./_app/immutable/assets/2.f26e4965.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.05e3bf92.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.e658e3fd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b3614709.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d05b5713.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.ebd3c666.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.00add97a.js">
+		<link href="./app/immutable/assets/2.f26e4965.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.78a62168.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/index.e658e3fd.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/singletons.fe0937fa.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.9fb0a472.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.ebd3c666.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.08365176.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -40,7 +40,7 @@
 			
 			<script>
 				{
-					__sveltekit_1r84t5f = {
+					__sveltekit_yv5uae = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -50,8 +50,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.05e3bf92.js"),
-						import("./_app/immutable/entry/app.d05b5713.js")
+						import("./app/immutable/entry/start.78a62168.js"),
+						import("./app/immutable/entry/app.9fb0a472.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
