--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <script src="./src/lib/gsapplugin.js"></script>
 		
 		<link href="./app/immutable/assets/2.f26e4965.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.78a62168.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.a44b865b.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.e658e3fd.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/singletons.fe0937fa.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.9fb0a472.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/singletons.296b2fb0.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.0eee89b6.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/0.ebd3c666.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.08365176.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.668fa65f.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -40,7 +40,7 @@
 			
 			<script>
 				{
-					__sveltekit_yv5uae = {
+					__sveltekit_1rx7i71 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -50,8 +50,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.78a62168.js"),
-						import("./app/immutable/entry/app.9fb0a472.js")
+						import("./app/immutable/entry/start.a44b865b.js"),
+						import("./app/immutable/entry/app.0eee89b6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
