--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
         <link rel="stylesheet" href="./style.css">
-        <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script> -->
-        <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script> -->
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> -->
-        <script src="./src/lib/scrollmagic.js"></script>
-        <script src="./src/lib/gsap.js"></script>
-        <script src="./src/lib/scrollmagicmarkers.js"></script>
-        <script src="./src/lib/gsapplugin.js"></script>
+         <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script> 
+         <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script> 
+									   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> 
+        
 		
 		<link href="./app/immutable/assets/2.f26e4965.css" rel="stylesheet">
 		<link rel="modulepreload" href="./app/immutable/entry/start.a44b865b.js">
